--- a/Rotas/Rotas/Rotas.vcxproj
+++ b/Rotas/Rotas/Rotas.vcxproj
@@ -19,15 +19,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="path.cpp" />
-    <ClCompile Include="src\domain\edge.cpp" />
-    <ClCompile Include="src\domain\vertex.cpp" />
+    <ClCompile Include="src\cli\exibicao.cpp" />
+    <ClCompile Include="src\domain\rota.cpp" />
+    <ClCompile Include="src\domain\caminho.cpp" />
+    <ClCompile Include="src\domain\cidade.cpp" />
     <ClCompile Include="src\rotas.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\domain\edge.h" />
-    <ClInclude Include="include\domain\vertex.h" />
-    <ClInclude Include="path.h" />
+    <ClInclude Include="include\cli\exibicao.h" />
+    <ClInclude Include="include\domain\rota.h" />
+    <ClInclude Include="include\domain\caminho.h" />
+    <ClInclude Include="include\domain\cidade.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{37235E36-F341-49F1-B34E-35915C456259}</ProjectGuid>
@@ -108,7 +110,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
