--- a/Rotas/Rotas/Rotas.vcxproj.filters
+++ b/Rotas/Rotas/Rotas.vcxproj.filters
@@ -4,20 +4,11 @@
     <Filter Include="src">
       <UniqueIdentifier>{b8141bb7-4e70-4dcc-a247-163b9965c7b7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include">
-      <UniqueIdentifier>{9c52d1ea-a104-4149-bfec-bedc71fa19e4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\domain">
       <UniqueIdentifier>{573c2fd3-78c8-4db2-82b7-cea603390775}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\domain">
-      <UniqueIdentifier>{eee93ac2-b2a3-43f8-9b1a-c9001da87346}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\cli">
       <UniqueIdentifier>{04b0f04e-a278-4f96-8826-87a35954e34a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="include\cli">
-      <UniqueIdentifier>{13eb3160-fdef-4463-936b-add4afbff817}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -36,19 +27,25 @@
     <ClCompile Include="src\domain\cidade.cpp">
       <Filter>src\domain</Filter>
     </ClCompile>
+    <ClCompile Include="src\cli\manipula_entrada.cpp">
+      <Filter>src\cli</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\cli\exibicao.h">
-      <Filter>include\cli</Filter>
+    <ClInclude Include="src\cli\exibicao.h">
+      <Filter>src\cli</Filter>
     </ClInclude>
-    <ClInclude Include="include\domain\rota.h">
-      <Filter>include\domain</Filter>
+    <ClInclude Include="src\cli\manipula_entrada.h">
+      <Filter>src\cli</Filter>
     </ClInclude>
-    <ClInclude Include="include\domain\caminho.h">
-      <Filter>include\domain</Filter>
+    <ClInclude Include="src\domain\caminho.h">
+      <Filter>src\domain</Filter>
     </ClInclude>
-    <ClInclude Include="include\domain\cidade.h">
-      <Filter>include\domain</Filter>
+    <ClInclude Include="src\domain\cidade.h">
+      <Filter>src\domain</Filter>
+    </ClInclude>
+    <ClInclude Include="src\domain\rota.h">
+      <Filter>src\domain</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
