--- a/Rotas/Rotas/Rotas.vcxproj.filters
+++ b/Rotas/Rotas/Rotas.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="src\cli">
       <UniqueIdentifier>{04b0f04e-a278-4f96-8826-87a35954e34a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\algoritmos">
+      <UniqueIdentifier>{baa26ef4-dcf6-4fe2-a846-c2f862b6dc52}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\rotas.cpp">
@@ -30,6 +33,9 @@
     <ClCompile Include="src\cli\manipula_entrada.cpp">
       <Filter>src\cli</Filter>
     </ClCompile>
+    <ClCompile Include="src\algoritmos\dijkstra.cpp">
+      <Filter>src\algoritmos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cli\exibicao.h">
@@ -46,6 +52,9 @@
     </ClInclude>
     <ClInclude Include="src\domain\rota.h">
       <Filter>src\domain</Filter>
+    </ClInclude>
+    <ClInclude Include="src\algoritmos\dijkstra.h">
+      <Filter>src\algoritmos</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
