Adicionado o esquieleto do teste de Gillet e Johnson
Adição do esqueleto do algoritmo do teste de Gillet e Johnson e
refatoração para utilizar o Google Test para validação.

--- a/Rotas/Rotas/Rotas.vcxproj.filters
+++ b/Rotas/Rotas/Rotas.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\cli\exibicao.cpp">
       <Filter>src\cli</Filter>
     </ClCompile>
+    <ClCompile Include="src\algoritmos\gillet_johnson.cpp">
+      <Filter>src\algoritmos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cli\exibicao.h">
@@ -54,6 +57,9 @@
       <Filter>src\domain</Filter>
     </ClInclude>
     <ClInclude Include="src\algoritmos\dijkstra.h">
+      <Filter>src\algoritmos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\algoritmos\gillet_johnson.h">
       <Filter>src\algoritmos</Filter>
     </ClInclude>
   </ItemGroup>
