--- a/Rotas/Rotas/Rotas.vcxproj
+++ b/Rotas/Rotas/Rotas.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\algoritmos\gillet_johnson.cpp" />
     <ClCompile Include="src\cli\exibicao.cpp" />
     <ClCompile Include="src\cli\manipula_entrada.cpp" />
+    <ClCompile Include="src\domain\context.cpp" />
     <ClCompile Include="src\domain\rota.cpp" />
     <ClCompile Include="src\domain\caminho.cpp" />
     <ClCompile Include="src\domain\cidade.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="src\cli\manipula_entrada.h" />
     <ClInclude Include="src\domain\caminho.h" />
     <ClInclude Include="src\domain\cidade.h" />
+    <ClInclude Include="src\domain\context.h" />
     <ClInclude Include="src\domain\rota.h" />
     <ClInclude Include="teitz_bart.h" />
   </ItemGroup>
