--- a/Rotas/Rotas/Rotas.vcxproj
+++ b/Rotas/Rotas/Rotas.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="src\algoritmos\dijkstra.cpp" />
     <ClCompile Include="src\algoritmos\gillet_johnson.cpp" />
+    <ClCompile Include="src\algoritmos\teitz_bart.cpp" />
     <ClCompile Include="src\cli\exibicao.cpp" />
     <ClCompile Include="src\cli\manipula_entrada.cpp" />
     <ClCompile Include="src\domain\context.cpp" />
@@ -28,18 +29,17 @@
     <ClCompile Include="src\domain\caminho.cpp" />
     <ClCompile Include="src\domain\cidade.cpp" />
     <ClCompile Include="src\rotas.cpp" />
-    <ClCompile Include="teitz_bart.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\algoritmos\dijkstra.h" />
     <ClInclude Include="src\algoritmos\gillet_johnson.h" />
+    <ClInclude Include="src\algoritmos\teitz_bart.h" />
     <ClInclude Include="src\cli\exibicao.h" />
     <ClInclude Include="src\cli\manipula_entrada.h" />
     <ClInclude Include="src\domain\caminho.h" />
     <ClInclude Include="src\domain\cidade.h" />
     <ClInclude Include="src\domain\context.h" />
     <ClInclude Include="src\domain\rota.h" />
-    <ClInclude Include="teitz_bart.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{37235E36-F341-49F1-B34E-35915C456259}</ProjectGuid>
