--- a/Rotas/Rotas/Rotas.vcxproj.filters
+++ b/Rotas/Rotas/Rotas.vcxproj.filters
@@ -39,11 +39,11 @@
     <ClCompile Include="src\algoritmos\gillet_johnson.cpp">
       <Filter>src\algoritmos</Filter>
     </ClCompile>
-    <ClCompile Include="teitz_bart.cpp">
-      <Filter>src\algoritmos</Filter>
-    </ClCompile>
     <ClCompile Include="src\domain\context.cpp">
       <Filter>src\domain</Filter>
+    </ClCompile>
+    <ClCompile Include="src\algoritmos\teitz_bart.cpp">
+      <Filter>src\algoritmos</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -68,11 +68,11 @@
     <ClInclude Include="src\algoritmos\gillet_johnson.h">
       <Filter>src\algoritmos</Filter>
     </ClInclude>
-    <ClInclude Include="teitz_bart.h">
-      <Filter>src\algoritmos</Filter>
-    </ClInclude>
     <ClInclude Include="src\domain\context.h">
       <Filter>src\domain</Filter>
+    </ClInclude>
+    <ClInclude Include="src\algoritmos\teitz_bart.h">
+      <Filter>src\algoritmos</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
