Adição da lista de demandas em csv e o suporte dela no context
Agora a lista de demandas está sendo lida do CSV e adicionada no Context.
Para isso, precisa chamar o método
inicializa_dados_partir_do_csv_com_demanda passando o path da matriz de
distâncias e da lista de demandas. Também fiz o teste unitário dessa
inicialização com demandas. A princípio tá ok, mas acho que quebrou algo
no gillet que tava pegando o arquivo em ordem alfabética.

--- a/Rotas/Rotas/Rotas.vcxproj
+++ b/Rotas/Rotas/Rotas.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="src\algoritmos\teitz_bart.cpp" />
     <ClCompile Include="src\cli\exibicao.cpp" />
     <ClCompile Include="src\cli\manipula_entrada.cpp" />
+    <ClCompile Include="src\domain\caminho.cpp" />
     <ClCompile Include="src\domain\context.cpp" />
     <ClCompile Include="src\domain\rota.cpp" />
     <ClCompile Include="src\domain\cidade.cpp" />
@@ -45,6 +46,7 @@
     <ClInclude Include="src\algoritmos\teitz_bart.h" />
     <ClInclude Include="src\cli\exibicao.h" />
     <ClInclude Include="src\cli\manipula_entrada.h" />
+    <ClInclude Include="src\domain\caminho.h" />
     <ClInclude Include="src\domain\cidade.h" />
     <ClInclude Include="src\domain\context.h" />
     <ClInclude Include="src\domain\rota.h" />
