--- a/Rotas/Rotas/Rotas.vcxproj.filters
+++ b/Rotas/Rotas/Rotas.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\algoritmos\teitz_bart.cpp">
       <Filter>src\algoritmos</Filter>
     </ClCompile>
+    <ClCompile Include="src\domain\caminho.cpp">
+      <Filter>src\domain</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cli\exibicao.h">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="src\algoritmos\teitz_bart.h">
       <Filter>src\algoritmos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\domain\caminho.h">
+      <Filter>src\domain</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
